Introducir para obtener el identificador de la sala en la que está el usuario
